fixed bug where you could press link on music card which wasnt visible

--- a/MusicApp/wwwroot/css/cards.css
+++ b/MusicApp/wwwroot/css/cards.css
@@ -81,7 +81,8 @@ audio{
 }
 
 .ease-out-transition-all-long{
-	transition: all .7s ease-out;
+	/* transition: all .7s ease-out; */
+	transition: all .1s ease-out;
 }
 
 .no-hover-on-PC{
@@ -111,4 +112,3 @@ audio{
   top:62%;
   background: red;
 }
-
